--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,10 +1,7 @@
-// использование данных из конфигурации файла .env
-require('dotenv').config();
-
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('db', 'config', 'database.json'),
+  'config': path.resolve('db', 'config', 'database.js'),
   'models-path': path.resolve('db', 'models'),
   'seeders-path': path.resolve('db', 'seeders'),
   'migrations-path': path.resolve('db', 'migrations')
