--- a/server/example.env
+++ b/server/example.env
@@ -1,16 +1,16 @@
 DB_USERNAME = 'db server username'
 DB_USERPASSWORD = 'db server password'
+DB_PORT = 'sql server port (postgres default is 5432)'
+DB_HOST = 'db server host'
 DB_NAME = 'db name'
 DB_DIALECT = 'db dialect'
-DB_HOST = 'db server host'
-DB_PORT =
 EMAIL_SMTP_HOST = 'smtp server host'
-EMAIL_SMTP_PORT = smtp port
+EMAIL_SMTP_PORT = 'smtp port (default is 25 or 465 or 587)'
 EMAIL_SMTP_USER = 'smtp user'
 EMAIL_SMTP_PASSWORD = 'smtp password'
-API_URL =http://localhost
-API_PORT =5173
-FRONT_URL =http://localhost
-FRONT_PORT = ''
+API_URL ='http://backendhost'
+API_PORT = 'back end api port (http://backendhost:API_PORT)'
+FRONT_PORT = 'front end port'
+FRONT_URL ='http://frontendhost (http://frontendhost:FRONT_PORT)'
 JWT_ACCESS_SIGN = 'access token secret'
 JWT_REFRESH_SIGN = 'refresh token secret'
